# roverlay

./: README.md
roverlay/: Cargo.toml  slint-rust-template.desktop
roverlay/src/: main.rs
roverlay/ui/: app-window.slint
