[package]
name = "roverlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.14.1"
sysinfo = "0.30"

[build-dependencies]
slint-build = "1.14.1"

[package.metadata.appimage]
icon = "slint-rust-template.svg"
desktop_file = "slint-rust-template.desktop"
